# memkind

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .gitmodules-local  .lgtm.yml  .travis.yml  AUTHORS  CHANGES.txt  CONTRIBUTING  COPYING  COPYING.txt  ChangeLog  Doxyfile  MANIFEST  Makefile  Makefile.am  NEWS  PULL_REQUEST_TEMPLATE.md  README  README.md  README.txt  TODO  TODO.txt  VERSION  actypes.h  astyle.sh  autogen.sh  build.sh  build_jemalloc.sh  clang-format.sh  codecov.yml  config.h.in~  config.h.orig  config_file  config_tls.h.in  configure.ac  debug.patch  format.sh  hbw_malloc.h  (+49 more)
.github/workflows/: codeql.yml  gha.yml  jenkins_tests_execution.yml
autohbw/: Makefile.mk  autohbw.c  autohbw_README  autohbw_api.h  autohbw_get_src_lines.pl  autohbw_helper.h  autohbw_test.sh
config/: node-bandwidth
copying_headers/: EXEMPT  MANIFEST.EXEMPT  MANIFEST.freeBSD  MANIFEST.freeBSD3  MANIFEST.intel  MANIFEST.intel-acpi  MANIFEST.stream  check  header.freeBSD  header.intel  header.intel-acpi  header.stream  license.cpp  license_intel  license_intel-acpi  test_license.sh
css/: memkind.less
css/bootstrap/: theme.less  variables.less
debian/: changelog.erb  control.erb  rules.erb
doc/: README  RELEASE_STEPS.md  autohbw.7.md  fixedallocator.3.md  hbwallocator.3.md  hbwmalloc.3.md  libmemtier.3.md  libmemtier.7.md  memkind-auto-dax-kmem-nodes.1.md  memkind-hbw-nodes.1.md  memkind.3.md  memkind_arena.3.md  memkind_dax_kmem.3.md  memkind_default.3.md  memkind_fixed.3.md  memkind_hbw.3.md  memkind_hugetlb.3.md  memkind_interleave.3.md  memkind_pmem.3.md  memkindallocator.3  memkindallocator.3.md  memtier.1.md  memtier.7.md  pmemallocator.3.md
example/: Makefile  README.txt  filter_example.c  hello_example.c  hello_hbw_example.c  hello_memkind_example.c  hello_numakind_example.c  new_kind_example.c  stream_example.c
examples/: Makefile  Makefile.mk  README  README.md  autohbw.c  autohbw_README  autohbw_api.h  autohbw_candidates.c  autohbw_get_src_lines.pl  autohbw_helper.h  autohbw_test.sh  eratosthenes_example.c  filter_example.c  fixed_cpp_allocator.cpp  fixed_malloc.c  gb_realloc_example.c  hello_hbw_example.c  hello_memkind_example.c  memkind_allocated.hpp  memkind_allocated_example.cpp  memkind_cpp_allocator.cpp  memkind_cpp_concurrent_hash_map.cpp  memkind_decorator_debug.c  memkind_free_nullptr.c  memkind_get_stat.c  new_kind_example.c  numakind.c  numakind.h  numakind_helper.h  numakind_test.c  pmem_alignment.c  pmem_and_dax_kmem_kind.c  pmem_and_default_kind.c  pmem_config.c  pmem_cpp_allocator.cpp  pmem_detect_kind.c  pmem_example.c  pmem_free_with_unknown_kind.c  pmem_kinds.c  pmem_malloc.c  (+5 more)
future/: README.txt  numakind.h
include/: fixed_allocator.h  hbw_allocator.h  hbwmalloc.h  memkind.h  memkind_allocator.h  memkind_deprecated.h  memkind_memtier.h  mtt_allocator.h  pmem_allocator.h  pmemmalloc.h
init.d/: memkind
jemalloc/: .gitignore  COPYING  ChangeLog  INSTALL.md  MANIFEST  Makefile.in  README  TUNING.md  build.sh  configure.ac  debug.patch  make.spec  make_rpm.mk
jemalloc/doc/: jemalloc.xml.in
jemalloc/m4/: ax_cxx_compile_stdcxx.m4
jemalloc/src/: arena.c  base.c  chunk.c  chunk_dss.c  chunk_mmap.c  ctl.c  extent.c  huge.c  jemalloc.c  large.c  nstime.c  pages.c  sc.c  tcache.c  tsd.c
man/: README  autohbw.7  fixedallocator.3  hbwallocator.3  hbwmalloc.3  libmemtier.3  libmemtier.7  memkind-auto-dax-kmem-nodes.1  memkind-hbw-nodes.1  memkind.3  memkind_arena.3  memkind_dax_kmem.3  memkind_default.3  memkind_fixed.3  memkind_gbtlb.3  memkind_hbw.3  memkind_hmat.3  memkind_hugetlb.3  memkind_interleave.3  memkind_memtier.3  memkind_pmem.3  memkindallocator.3  memtier.1  memtier.3  memtier.7  pmemallocator.3
man_pages/: fixedallocator.html  hbwmalloc.html  libmemtier.html  libmemtier3.html  libmemtier7.html  memkind.html  memkindallocator.html  pmemallocator.html
pmtt_reader/: Makefile  pmtt_reader.c
scripts/: Makefile.mk  jemalloc_includer.sh  memkind-hbw-nodes  memkind_gtest.sh
src/: Makefile.mk  actypes.h  bigary.c  critnib.c  ctl.c  fast_pool_allocator.c  fast_slab_allocator.c  hasher.c  hbw_allocator.h  hbwmalloc.c  hbwmalloc.h  heap_manager.c  memkind-auto-dax-kmem-nodes.c  memkind-balance-verify.c  memkind-hbw-nodes.c  memkind.c  memkind.h  memkind_arena.c  memkind_arena.h  memkind_bandwidth.c  memkind_bitmask.c  memkind_capacity.c  memkind_cpu.c  memkind_dax_kmem.c  memkind_default.c  memkind_default.h  memkind_fixed.c  memkind_gbtlb.c  memkind_gbtlb.h  memkind_hbw.c  memkind_hbw.h  memkind_hmat.c  memkind_hugetlb.c  memkind_hugetlb.h  memkind_interleave.c  memkind_interleave.h  memkind_local.c  memkind_log.c  memkind_mem_attributes.c  memkind_memtier.c  (+22 more)
templates/: memkind.tpl.html
test/: Allocator.hpp  Makefile  Makefile.mk  README  TestPolicy.hpp  TestPrereq.hpp  all_tests.cpp  alloc_benchmark.c  alloc_performance_tests.cpp  allocate_to_max_stress_test.cpp  api_tests.cpp  autohbw_test.py  autohbw_test_helper.c  background_threads_test.cpp  background_threads_tests.cpp  bat_bind_tests.cpp  bat_interleave_tests.cpp  bat_tests.cpp  build.sh  check.c  check.cpp  check.h  check.sh  common.h  cpu_get_arena_test.cpp  create_tests.cpp  create_tests_helper.c  dax_kmem_alloc_performance_tests.cpp  dax_kmem_api.cpp  dax_kmem_api.h  dax_kmem_env_var_test.py  dax_kmem_nodes.cpp  dax_kmem_nodes.h  decorator_memtier_test  decorator_memtier_test.cpp  decorator_memtier_test.h  decorator_test.cpp  decorator_test.h  defrag_hint_tests.cpp  dlopen_test.cpp  (+116 more)
test/allocator_perf_tool/: AllocationSizes.hpp  Allocation_info.cpp  Allocation_info.hpp  Allocator.hpp  AllocatorFactory.hpp  CSVLogger.hpp  CommandLine.hpp  Configuration.hpp  ConsoleLog.hpp  FootprintSampling.cpp  FootprintSampling.h  FootprintTask.cpp  FootprintTask.h  FunctionCalls.hpp  FunctionCallsPerformanceTask.cpp  FunctionCallsPerformanceTask.h  GTestAdapter.hpp  HBWmallocAllocatorWithTimer.hpp  HugePageOrganizer.hpp  HugePageUnmap.hpp  (+25 more)
tests/: NOTES  main.cpp
tiering/: Makefile.mk  ctl.c  ctl.h  memtier.c  memtier_log.c  memtier_log.h  utils.c
utils/: Jenkinsfile
(+215 files in other folders)
